<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text=""
        android:textColor="@color/base_accent_color"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/points_available"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/drawable_for_button_exchange_points"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/home_points_exchange_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/profile_points_banner_background_view_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/profile_points_banner_background_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="215dp"
        android:background="@drawable/base_round_corners_bg"
        android:backgroundTint="@color/color_naturals_neutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/profile_points_banner_background_view_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/base_round_corners_bg"
        android:backgroundTint="@color/color_naturals_neutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvEarned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text=""
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_points_banner_background_view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/all_earned"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_points_banner_background_view" />

    <TextView
        android:id="@+id/tvSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text=""
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/profile_points_banner_background_view_2"
        app:layout_constraintTop_toTopOf="@+id/profile_points_banner_background_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/all_spend"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/profile_points_banner_background_view_2"
        app:layout_constraintTop_toTopOf="@+id/profile_points_banner_background_view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/history_payments"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_points_banner_background_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />











</androidx.constraintlayout.widget.ConstraintLayout>